--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "stripe": "^14.17.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
     "cloudinary": "^1.41.0"
 
   }
